--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^0.13.7
   font_awesome_flutter: ^8.8.1
+  email_validator: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
