--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cloud_firestore: ^0.13.7
   font_awesome_flutter: ^8.8.1
   email_validator: ^1.0.0
+  firebase_auth: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
