--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   email_validator: ^1.0.0
   firebase_auth: ^0.16.1
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
