--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   email_validator: ^1.0.0
   firebase_auth: ^0.16.1
   intl: ^0.16.1
+  bubble: ^1.1.9+1
 
 
   # The following adds the Cupertino Icons font to your application.
